# local_scrape

./: .replit  README.md  available_total_hotels.py  demo.py  extract_hotel_data.py  get_total_hotels.py  handle_form.py  info.md  input_data.py  load_driver.py  logger.py  main.py  pyproject.toml  replit.nix  save_to_csv.py  scrape_time.py
data/: Auburn_Alabama_United_States_05_25_2024_To_05_26_2024.csv  Auburn_Alabama_United_States_05_26_2024_To_05_27_2024.csv  Auburn_Alabama_United_States_05_28_2024_To_05_29_2024.csv  Baton_Rouge_LA_USA_05_25_2024_To_05_26_2024.csv  Baton_Rouge_LA_USA_05_26_2024_To_05_27_2024.csv  Chattanooga_Lovell_Airport_TN_United_States_05_25_2024_To_05_26_2024.csv  Chattanooga_Lovell_Airport_TN_United_States_05_26_2024_To_05_27_2024.csv  Chattanooga_TN_United_States_05_25_2024_To_05_26_2024.csv  Chattanooga_TN_United_States_05_26_2024_To_05_27_2024.csv  College_Station_TX_United_States_05_25_2024_To_05_26_2024.csv  College_Station_TX_United_States_05_26_2024_To_05_27_2024.csv  College_Station_TX_United_States_05_28_2024_To_05_29_2024.csv  Louisville_KY_United_States_05_25_2024_To_05_26_2024.csv  Louisville_KY_United_States_05_26_2024_To_05_27_2024.csv
